@@ -141,8 +141,8 @@ PWR
 		冰晶石配方，在化工厂或工作台（需要实验室玻璃器皿）中使用1个钠粉、1个铝粉和2个氟石粉合成1个冰晶石块；
 		碱液替代配方，搅拌机中使用1个钠粉/锂粉和1000mB水制作500mB碱液；
 	AE2联动：
-		电弧焊机充能赛特斯石英水晶，基础时间30t，基础消耗25000HE/t；
-		酸化机催生石英种子，消耗1个石英种子和500mB水得到1个高纯水晶，基础时间160t；
+		电弧焊机充能赛特斯石英水晶，基础时间10t，基础消耗1000HE/t；
+		酸化机催生石英种子，消耗2个石英种子和500mB水得到2个高纯水晶，基础时间160t；
 	加入了更多回转炉合金配方；
 资源
 	金属装饰方块的制造配方回退为1金属锭制作1块，回收配方同时回退为1块回收1锭；
@@ -164,9 +164,9 @@ PWR
 			可在汽轮机（小汽轮机、工业汽轮机、利维坦汽轮机均可）中放出能量，1mB热改性冷凝胶放出3200HE能量；
 
 		“液氮”：
-			适用于RBMK的强力制冷剂，温度-196℃，热容100TU/mB；
+			适用于RBMK的强力制冷剂，温度-200℃，热容100TU/mB；
 			在化工厂中直接合成，仅消耗能量，类似氙气；
-			可将RBMK柱体温度降至其本身温度（-196℃），加热后不得到任何流体产物；
+			可将RBMK柱体温度降至其本身温度（-200℃），加热后不得到任何流体产物；
 	LPG的热值改为2倍，即回归旧版；
 	新增PWR冷却剂：
 		血，冷却效率150%；
