@@ -4146,7 +4146,7 @@ tile.concrete_colored.orange.name=Oranger Beton
 tile.concrete_colored.pink.name=Rosa Beton
 tile.concrete_colored.purple.name=Lila Beton
 tile.concrete_colored.red.name=Roter Beton
-tile.concrete_colored.silver.name=Hellgrauer Beton 
+tile.concrete_colored.silver.name=Hellgrauer Beton
 tile.concrete_colored.white.name=Weißer Beton
 tile.concrete_colored.yellow.name=Gelber Beton
 tile.concrete_colored_ext.bronze.name=Builder's Choice Concrete - Bronzeplatten
@@ -4398,7 +4398,7 @@ tile.hadron_coil_schrabidate.name=Dichte Schrabidatspule
 tile.hadron_coil_schrabidium.name=Dichte Schrabidiumspule
 tile.hadron_coil_starmetal.name=Dichte Sternenmetallspule
 tile.hadron_cooler.name=Teilchenbeschleuniger-Kühlungseinheit
-tile.hadron_cooler_mk2.nameTeilchenbeschleuniger-Kühlungseinheit - Das Palindrome-Spezial
+tile.hadron_cooler_mk2.name=Teilchenbeschleuniger-Kühlungseinheit - Das Palindrome-Spezial
 tile.hadron_core.name=Teilchenbeschleuniger-Kernkomponente
 tile.hadron_diode.name=Schottky-Partikeldiode
 tile.hadron_plating.name=Teilchenbeschleuniger-Außenwand
@@ -5110,6 +5110,7 @@ turret.on=AN
 turret.players=Spieler anzielen: %s
 
 upgrade.consumption=Verbrauch %s
+upgrade.productivity=Produktivität %s
 upgrade.speed=Verarbeitungszeit %s
 
 wavelengths.name.ir=Infrarot
