@@ -6276,6 +6276,7 @@ upgrade.delay=Process time %s
 upgrade.efficiency=Efficiency %s
 upgrade.fortune=Fortune %s
 upgrade.overheatChance=Overheat chance %s
+upgrade.productivity=Productivity %s
 upgrade.range=Range %s
 
 upgrade.gui.title=§lAcceptable Upgrades:§r
